--- a/src/app/core/sponsors/sponsors.html
+++ b/src/app/core/sponsors/sponsors.html
@@ -1,6 +1,6 @@
 <div class="w-full mx-auto pb-2">
   <span
-    class="block text-center md:text-2xl sm:text-xl text-black italic font-bold mt-2 mb-4"
+    class="block text-center md:text-2xl sm:text-xl text-white/90 italic font-bold mt-2 mb-4"
   >
     Nuestros colaboradores:
   </span>
