--- a/src/app/features/home/tournamentsSection/tournamentCard/tournamentCard.html
+++ b/src/app/features/home/tournamentsSection/tournamentCard/tournamentCard.html
@@ -24,7 +24,7 @@
     <div class="flex items-center space-x-3 text-lg text-gray-300 mb-2">
       <span class="text-xl font-semibold">{{ data().hour }}</span>
       <span class="ml-1 text-gray-300">·</span>
-      <span class="text-blue-400 font-bold text-xl">
+      <span class="text-amber-400 font-bold text-xl">
         Precio:
         {{ data().prize }}€</span
       >
@@ -46,7 +46,7 @@
           *ngFor="let reward of data().rewards"
           class="grid grid-cols-[auto,1fr] gap-x-3 items-baseline"
         >
-          <span class="text-blue-400 whitespace-nowrap">
+          <span class="text-amber-400 whitespace-nowrap">
             {{ reward.standing }}:
           </span>
           <span class="break-words text-gray-300">{{
