--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,20 +6,26 @@
 body,
 html {
   font-family: "Rubik", "ui-sans-serif", "system-ui", sans-serif;
-  background-image: url("/src/assets/images/noise/nnnoise.svg");
 }
 
-section {
-  background-image: url("/src/assets/images/noise/nnnoise.svg");
-}
-
-/* En tu styles.css o similar */
 .scrollbar-hide {
-  -ms-overflow-style: none; /* IE y Edge */
-  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 .scrollbar-hide::-webkit-scrollbar {
-  display: none; /* Chrome, Safari y Opera */
+  display: none;
+}
+
+:host {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.leaflet-map-container {
+  width: 100%;
+  height: 100%;
+  min-height: 400px;
 }
 
 @layer utilities {
