--- a/src/app/features/home/tournamentsSection/tournamentCard/tournamentCard.html
+++ b/src/app/features/home/tournamentsSection/tournamentCard/tournamentCard.html
@@ -1,5 +1,5 @@
 <article
-  class="relative flex flex-col justify-end overflow-hidden rounded-3xl min-h-[360px] h-full shadow-xl transition-transform bg-neutral-800 text-white"
+  class="relative flex flex-col overflow-hidden rounded-3xl min-h-[360px] h-full shadow-xl transition-transform bg-neutral-800 text-white"
 >
   <!-- Imagen de fondo con carga diferida -->
   <img
