--- a/src/app/features/home/hero-section/hero-section.html
+++ b/src/app/features/home/hero-section/hero-section.html
@@ -119,4 +119,6 @@
     </div>
   </div>
 </div>
-<hr class="border-b-1 border-white/80" />
+<div
+  class="h-px bg-gradient-to-r from-transparent via-amber-400/30 to-transparent"
+></div>
