--- a/src/app/features/home/locationSection/locationSection.html
+++ b/src/app/features/home/locationSection/locationSection.html
@@ -323,3 +323,6 @@
     </button>
   </div>
 </section>
+<div
+  class="h-px bg-gradient-to-r from-transparent via-amber-400/30 to-transparent"
+></div>
