--- a/src/app/features/home/tournamentsSection/tournamentSection.html
+++ b/src/app/features/home/tournamentsSection/tournamentSection.html
@@ -146,3 +146,6 @@
     </section>
   </div>
 </section>
+<div
+  class="h-px bg-gradient-to-r from-transparent via-amber-400/30 to-transparent"
+></div>
